styles/profile.module.css
.upperWrapper{
    margin-top: 3rem;
}

.upperContainer {
    display: flex;
    padding-left: 2rem;
    padding-right: 3rem;
}

.midWrapper{
    height: 22vw;
}

.divider {
    width: 100%;
    height: 10px;
    background-color: #443C68;
}

.name {
    font-size: 4rem !important;
    margin: 0;
    padding: 0;
}

.startDate {
    margin: 0;
    font-size: 1.1rem !important;
    padding-left: .27rem;
}

.leftContainer {
    margin-left: 1rem;
}

